cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@action_hierarchy.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/action_hierarchy.cedarschema
---
entity User;

action "read" in [Action::"readWrite"] appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};

action "readWrite";

action "write" in [Action::"readWrite"] appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};
