cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@basic_action.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/basic_action.cedarschema
---
entity User;

action "view" appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};
