cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@common_types.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/common_types.cedarschema
---
entity User = {
  id: __cedar::String,
  profile: {
    age: __cedar::Long,
    name: __cedar::String
  }
};

action "view" appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};
