cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@complex_common_types.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/complex_common_types.cedarschema
---
entity User = {
  active: __cedar::Bool,
  contact: {
    address: {
      city: __cedar::String,
      street: __cedar::String,
      zipcode: __cedar::String
    },
    email: __cedar::String,
    phone?: __cedar::String
  },
  permissions: Set<__cedar::String>
};

action "updateContact" appliesTo {
  principal: [User],
  resource: [User],
  context: {
    reason: __cedar::String,
    timestamp: __cedar::Long
  }
};
