cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@complex_types.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/complex_types.cedarschema
---
entity User = {
  permissions: Set<__cedar::String>,
  profile: {
    name: __cedar::String,
    settings: Set<__cedar::String>
  }
};
