cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@cross_namespace_references.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/cross_namespace_references.cedarschema
---
namespace App {
  entity Document = {
    editors: Set<Core::User>,
    owner: Core::User
  };

  action "edit" appliesTo {
    principal: [Core::User],
    resource: [App::Document],
    context: {}
  };
}

namespace Core {
  entity User = {
    id: __cedar::String,
    name: __cedar::String
  };
}
