cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@deeply_nested_records.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/deeply_nested_records.cedarschema
---
entity User = {
  profile: {
    personal: {
      contacts: {
        email: __cedar::String,
        phone?: __cedar::String
      },
      name: __cedar::String
    },
    preferences: {
      notifications: Set<__cedar::String>,
      theme: __cedar::String
    }
  }
};
